Fixed Spacing in Table

--- a/client/src/components/pages/Tickets/TicketList/TicketList.scss
+++ b/client/src/components/pages/Tickets/TicketList/TicketList.scss
@@ -75,12 +75,11 @@
             .table-row {
                 
                 .t-data {
-                    padding-bottom: .6em;
+                    padding-bottom: 1em;
                     color: #6f6f6f;
     
                     .view-btn, .edit-btn {
                         height: 25px;
-                        margin-top: 10px;
                         padding-top: 6.25px;
                         font-size: .725rem;
                     }
